# solution-verheij-metaal

./: .gitignore  README.md  pyproject.toml  setup.cfg
.github/workflows/: auto-update-scheduled-check.yml  dispatch-deployment-event.yml  pr-checks.yml  release.yml  update-workflows.yml
solution_verheij_metaal/: __init__.py
solution_verheij_metaal/limeobject_classes/: company.py  coworker.py  deal.py  document.py  history.py  lead.py  person.py  todo.py
tests/: custom_dsl.py
tests/lime_sales/: conftest.py
tests/lime_sales/limeobject_classes/: lime_sales_deal_test.py  lime_sales_document_test.py  lime_sales_history_test.py
